fix:token hidden in application.properties